--- a/xppbe/Analysis/Solutions.ipynb
+++ b/xppbe/Analysis/Solutions.ipynb
@@ -8,21 +8,15 @@
    "source": [
     "import numpy as np\n",
     "import os\n",
-    "import sys\n",
     "\n",
-    "sys.path.append(os.path.dirname(os.getcwd()))\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
+    "from xppbe.Model.Solutions_utils import Solution_utils\n",
+    "from xppbe.Model.PDE_Model import PBE\n",
+    "from xppbe.Mesh.Mesh import Domain_Mesh\n",
+    "from xppbe.Post.Postcode import Postprocessing as Post\n",
+    "from xppbe import xppbe_path\n",
     "\n",
-    "from Model.Solutions_utils import Solution_utils\n",
-    "from Model.PDE_Model import PBE\n",
-    "\n",
-    "from Mesh.Mesh import Domain_Mesh\n",
-    "from Post.Postcode import Postprocessing as Post\n",
-    "from Simulation import get_simulation_name\n",
-    "\n",
-    "simulation_name,results_path,main_path,logger = get_simulation_name(os.path.join(os.path.dirname(os.getcwd()), 'dataset.py'))\n",
-    "\n",
-    "file_path = os.getcwd()"
+    "results_path = os.path.join(xppbe_path,'results','solutions')\n",
+    "os.makedirs(results_path, exist_ok=True)"
    ]
   },
   {
@@ -31,9 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "molecule = 'methanol'\n",
-    "\n",
     "\n",
     "Rs = {'born_ion': 1,\n",
     "      'methanol': 2.54233,\n",
@@ -46,10 +38,10 @@
     "      'sphere_0.2': 1.2}\n",
     "\n",
     "Model = Solution_utils()\n",
-    "Model.get_charges = PBE.get_charges\n",
     "\n",
-    "Model.main_path = os.path.dirname(os.getcwd())\n",
-    "Model.pqr_path = os.path.join(os.path.dirname(os.getcwd()),'Molecules',molecule,f'{molecule}.pqr')\n",
+    "Model.main_path = xppbe_path\n",
+    "Model.molecule_path = os.path.join(xppbe_path,'Molecules',molecule)\n",
+    "\n",
     "\n",
     "Model.domain_properties = {\n",
     "        'molecule': molecule,\n",
@@ -63,7 +55,7 @@
     "      setattr(Model, key, Model.domain_properties[key])\n",
     "\n",
     "\n",
-    "Model.get_charges(Model)"
+    "PBE.get_charges(Model)"
    ]
   },
   {
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,59 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/martinachondo/PINN/code/Model/pbj/mesh/ExternalSoftware/MSMS/msms -if /home/martinachondo/PINN/code/Analysis/mesh_temp/methanol.xyzr -of /home/martinachondo/PINN/code/Analysis/mesh_temp/methanol -p 1.4 -d 5 -no_header\n",
-      "MSMS 2.6.1 started on tulio\n",
-      "Copyright M.F. Sanner (1994)\n",
-      "Compilation flags -O2 -DVERBOSE -DTIMING\n",
-      "INPUT  /home/martinachondo/PINN/code/Analysis/mesh_temp/methanol.xyzr 3 spheres 0 collision only, radii  0.200 to  1.888\n",
-      "PARAM  Probe_radius  1.400 density  5.000 hdensity  3.000\n",
-      "REDUCED SURFACE ...\n",
-      "    RS component  #faces  #edges #free_edges  #vertices   genus\n",
-      "         0           0        0          1          2      0.5\n",
-      "    Time Reduced Surface real: 0.00 user: 0.00 sys: 0.00\n",
-      "ANALYTICAL SOLVENT EXCLUDED SURFACE...\n",
-      "    Component   0\n",
-      "        Time Surface real: 0.00 user: 0.00 sys: 0.00\n",
-      "    SES comp.  #fac.  #edg. #s_edg. #vert. #s_vert. R_h C_h genus\n",
-      "         0        3      3      0       2        0   0   0    0\n",
-      "ANALYTICAL SURFACE AREA :\n",
-      "    Comp. probe_radius,   reent,    toric,   contact    SES       SAS\n",
-      "      0       1.400       0.000     6.139    46.868    53.007   151.129\n",
-      "TRIANGULATION...\n",
-      "    Component 0\n",
-      "    component#, vertices,  edges,  faces, genus, density\n",
-      "        0            240     714     476    0     4.528\n",
-      "        Time Triangulation real: 0.01 user: 0.00 sys: 0.00\n",
-      "NUMERICAL VOLUMES AND AREA\n",
-      "    Comp. probe_radius SES_volume SES_area)\n",
-      "       0      1.40       34.077     52.237\n",
-      "    Total ses_volume:    34.077\n",
-      "MSMS terminated normally\n",
-      "Total Time real: 0.01 user: 0.00 sys: 0.00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "    Couldn't find first face trying -all option\n",
-      "WARNING: atoms 2 is completely inside atom 1\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "-12.430738432192282"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,37 +118,8 @@
    "source": [
     "Model.mesh_density = 3\n",
     "Model.mesh_generator = 'msms'\n",
-    "phi_q = Model.phi_known('pbj','react',Model.x_qs,'molecule')\n",
-    "Model.solvation_energy_phi_qs(phi_q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phi,bools = Model.pbj_obj.calculate_potential(Model.x_qs,'molecule')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.00064069,  0.00179684, -0.01052827])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "phi"
+    "phi_q = Model.phi_known('PBJ','react',Model.x_qs,'molecule')\n",
+    "PBE.solvation_energy_phi_qs(Model,phi_q)"
    ]
   },
   {
@@ -211,30 +131,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-73.13704757700724\n",
-      "[-0.0149601  -0.01451289 -0.0165293  -0.01756816 -0.01609127 -0.01400082\n",
-      " -0.01420401 -0.01449526 -0.01436105 -0.01478346 -0.01487474 -0.01501364\n",
-      " -0.01465445 -0.01440891 -0.01448955 -0.01504634 -0.01500428 -0.01502074\n",
-      " -0.01554073 -0.01578378 -0.01580813 -0.01551957 -0.01506542 -0.01584317\n",
-      " -0.01652246 -0.01676533 -0.01704408]\n"
+      "-3.3912698008786037\n",
+      "[-0.00072111  0.00097837 -0.00173453]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-73.13704757700724"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "phi_q = Model.Spherical_Harmonics(Model.x_qs,'molecule',R_mol)\n",
-    "print(Model.solvation_energy_phi_qs(phi_q))\n",
-    "print(phi_q)\n",
-    "Model.solvation_energy_phi_qs(phi_q)"
+    "print(PBE.solvation_energy_phi_qs(Model,phi_q))\n",
+    "print(phi_q)"
    ]
   },
   {
