--- a/tutorials/tutorial.ipynb
+++ b/tutorials/tutorial.ipynb
@@ -66,7 +66,7 @@
    ],
    "source": [
     "simulation.create_simulation()\n",
-    "simulation.adapt_simulation()"
+    "simulation.adapt_model()"
    ]
   },
   {
