--- a/xppbe/Post/Post_Template.ipynb
+++ b/xppbe/Post/Post_Template.ipynb
@@ -6,23 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "import os\n",
-    "import shutil\n",
     "import json\n",
-    "import numpy as np\n",
-    "\n",
-    "current_directory = os.getcwd()\n",
-    "main_path = os.path.dirname(os.path.dirname(current_directory))\n",
-    "sys.path.append(main_path)\n",
-    "\n",
-    "simulation_name = os.path.basename(current_directory)\n",
-    "results_path = current_directory\n",
-    "\n",
-    "shutil.copyfile(os.path.join(results_path, simulation_name + '.py'), os.path.join(main_path, 'S_temp.py'))\n",
-    "\n",
-    "print(main_path)\n",
-    "print(results_path)"
+    "import numpy as np"
    ]
   },
   {
@@ -45,13 +31,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_name = 'S_temp'\n",
-    "folder_path = os.path.join(main_path,'results',folder_name)\n",
+    "from xppbe.Simulation import Simulation\n",
+    "from xppbe import xppbe_path\n",
     "\n",
-    "from S_temp import simulation\n",
+    "simulation_name = os.path.basename(os.getcwd())\n",
     "\n",
-    "print(simulation.domain_properties)\n",
-    "simulation.create_simulation()"
+    "simulation = Simulation(f'{simulation_name}.yaml', results_path=xppbe_path, load_results=True)\n",
+    "\n",
+    "simulation.create_simulation()\n",
+    "print(simulation.domain_properties)"
    ]
   },
   {
@@ -67,8 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Iter = 2\n",
-    "simulation.load_model(folder_path,results_path,Iter, save=False)\n",
+    "Iter = 5\n",
+    "simulation.load_model(Iter, save=False)\n",
     "Post = simulation.Post"
    ]
   },
@@ -85,17 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = Post.save_values_file(save=False) \n",
-    "print(json.dumps(df, indent=4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Post.plot_G_solv_history()"
+    "Post.plot_G_solv_history();"
    ]
   },
   {
