--- a/xppbe/Analysis/Excels/results.ipynb
+++ b/xppbe/Analysis/Excels/results.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -199,6 +199,22 @@
        "      <td>52.290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>B21_FO_H4_N100_E_FA_ModMLP</th>\n",
+       "      <td>-167.578</td>\n",
+       "      <td>4.530000e-02</td>\n",
+       "      <td>7.179000e-03</td>\n",
+       "      <td>0.001056</td>\n",
+       "      <td>3.461000e-02</td>\n",
+       "      <td>0.001433</td>\n",
+       "      <td>6.903000e-07</td>\n",
+       "      <td>1.039000e-03</td>\n",
+       "      <td>6.139000e-03</td>\n",
+       "      <td>1.645000e-05</td>\n",
+       "      <td>4.176000e-08</td>\n",
+       "      <td>4.732000e-08</td>\n",
+       "      <td>58.380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>B7_FO_H6_N200_E_FA</th>\n",
        "      <td>-165.311</td>\n",
        "      <td>1.049000e-03</td>\n",
@@ -229,6 +245,22 @@
        "      <td>4.364000e-08</td>\n",
        "      <td>1.726000e-08</td>\n",
        "      <td>62.280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B24_H6_N200_E_FA_ModMLP</th>\n",
+       "      <td>-164.996</td>\n",
+       "      <td>6.450000e-05</td>\n",
+       "      <td>1.177000e-05</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>1.761000e-05</td>\n",
+       "      <td>0.000018</td>\n",
+       "      <td>1.691000e-08</td>\n",
+       "      <td>1.175000e-05</td>\n",
+       "      <td>3.502000e-12</td>\n",
+       "      <td>1.582000e-11</td>\n",
+       "      <td>3.194000e-08</td>\n",
+       "      <td>2.064000e-08</td>\n",
+       "      <td>55.640</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B8_FO_H4_N100_E_FA</th>\n",
@@ -359,6 +391,22 @@
        "      <td>65.100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>B23_FO_H6_N200_E_FA_ModMLP</th>\n",
+       "      <td>-166.800</td>\n",
+       "      <td>6.437000e-02</td>\n",
+       "      <td>1.604000e-02</td>\n",
+       "      <td>0.015980</td>\n",
+       "      <td>1.115000e-02</td>\n",
+       "      <td>0.010400</td>\n",
+       "      <td>1.031000e-06</td>\n",
+       "      <td>1.592000e-02</td>\n",
+       "      <td>1.216000e-04</td>\n",
+       "      <td>6.140000e-05</td>\n",
+       "      <td>1.763000e-07</td>\n",
+       "      <td>1.834000e-07</td>\n",
+       "      <td>37.560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>B16_FO_H4_N200_E_FA_WF</th>\n",
        "      <td>-165.759</td>\n",
        "      <td>1.179000e-02</td>\n",
@@ -405,6 +453,22 @@
        "      <td>5.189000e-09</td>\n",
        "      <td>4.473000e-09</td>\n",
        "      <td>55.810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B22_FO_H4_N250_E_FA_ModMLP</th>\n",
+       "      <td>-164.911</td>\n",
+       "      <td>3.369000e-02</td>\n",
+       "      <td>3.245000e-03</td>\n",
+       "      <td>0.003248</td>\n",
+       "      <td>4.063000e-03</td>\n",
+       "      <td>0.004353</td>\n",
+       "      <td>2.905000e-07</td>\n",
+       "      <td>3.202000e-03</td>\n",
+       "      <td>4.244000e-05</td>\n",
+       "      <td>4.512000e-05</td>\n",
+       "      <td>1.820000e-07</td>\n",
+       "      <td>1.985000e-07</td>\n",
+       "      <td>54.780</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B20_FO_H4_N200_E_FA_WF_ModMLP</th>\n",
@@ -494,8 +558,10 @@
        "                               Gsolv_value    Loss_XPINN      Loss_NN1  \\\n",
        "B13_H4_N200                       -165.255  6.527000e-03  5.018000e-03   \n",
        "B6_FO_H2_N200_E_FA                -165.388  1.180000e-02  1.532000e-03   \n",
+       "B21_FO_H4_N100_E_FA_ModMLP        -167.578  4.530000e-02  7.179000e-03   \n",
        "B7_FO_H6_N200_E_FA                -165.311  1.049000e-03  7.149000e-05   \n",
        "B11_FO_H4_N200_E                  -164.610  2.805000e-03  2.411000e-04   \n",
+       "B24_H6_N200_E_FA_ModMLP           -164.996  6.450000e-05  1.177000e-05   \n",
        "B8_FO_H4_N100_E_FA                -165.336  2.075000e-03  4.481000e-04   \n",
        "B12_FO_H4_N200                    -166.418  6.052000e-03  5.808000e-04   \n",
        "B4_FO_H4_N200_E_FA                -164.719  1.927000e-03  4.400000e-04   \n",
@@ -504,9 +570,11 @@
        "B15_FO_H2_N200_E_FA_ModMLP        -166.399  1.908000e-02  1.376000e-03   \n",
        "B10_FO_H4_N200_FA                 -166.509  4.567000e-03  4.599000e-04   \n",
        "B19_FO_H4_N200_E_FA_ModMLP        -163.950  1.295000e-02  1.780000e-04   \n",
+       "B23_FO_H6_N200_E_FA_ModMLP        -166.800  6.437000e-02  1.604000e-02   \n",
        "B16_FO_H4_N200_E_FA_WF            -165.759  1.179000e-02  6.629000e-04   \n",
        "B14_FO_H4_N200_E_FA_ResNet        -166.391  2.056000e-03  6.977000e-04   \n",
        "B9_FO_H4_N250_E_FA                -164.898  1.013000e-03  1.908000e-04   \n",
+       "B22_FO_H4_N250_E_FA_ModMLP        -164.911  3.369000e-02  3.245000e-03   \n",
        "B20_FO_H4_N200_E_FA_WF_ModMLP     -164.775  7.133000e-03  5.801000e-04   \n",
        "B5_H4_N200_E_FA                   -164.194  4.078000e-03  2.447000e-03   \n",
        "B_R2                              -165.041  2.555000e-05  3.280000e-06   \n",
@@ -516,8 +584,10 @@
        "                                    Loss_NN2  Loss_Val_NN1  Loss_Val_NN2  \\\n",
        "B13_H4_N200                         0.005018  4.926000e-03      0.004926   \n",
        "B6_FO_H2_N200_E_FA                  0.001040  1.662000e-03      0.000930   \n",
+       "B21_FO_H4_N100_E_FA_ModMLP          0.001056  3.461000e-02      0.001433   \n",
        "B7_FO_H6_N200_E_FA                  0.000020  2.684000e-04      0.000134   \n",
        "B11_FO_H4_N200_E                    0.000065  5.838000e-04      0.000307   \n",
+       "B24_H6_N200_E_FA_ModMLP             0.000012  1.761000e-05      0.000018   \n",
        "B8_FO_H4_N100_E_FA                  0.000008  4.037000e-04      0.000008   \n",
        "B12_FO_H4_N200                      0.000920  8.260000e-04      0.001288   \n",
        "B4_FO_H4_N200_E_FA                  0.000030  5.848000e-04      0.000037   \n",
@@ -526,9 +596,11 @@
        "B15_FO_H2_N200_E_FA_ModMLP          0.000937  1.476000e-03      0.000999   \n",
        "B10_FO_H4_N200_FA                   0.000657  6.056000e-04      0.000710   \n",
        "B19_FO_H4_N200_E_FA_ModMLP          0.000176  2.685000e-04      0.000592   \n",
+       "B23_FO_H6_N200_E_FA_ModMLP          0.015980  1.115000e-02      0.010400   \n",
        "B16_FO_H4_N200_E_FA_WF              0.000812  1.041000e-03      0.001398   \n",
        "B14_FO_H4_N200_E_FA_ResNet          0.000005  1.130000e-03      0.000023   \n",
        "B9_FO_H4_N250_E_FA                  0.000011  1.017000e-03      0.000033   \n",
+       "B22_FO_H4_N250_E_FA_ModMLP          0.003248  4.063000e-03      0.004353   \n",
        "B20_FO_H4_N200_E_FA_WF_ModMLP       0.000254  7.399000e-04      0.000308   \n",
        "B5_H4_N200_E_FA                     0.002448  2.357000e-03      0.002358   \n",
        "B_R2                                0.000003  5.575000e-06      0.000005   \n",
@@ -538,8 +610,10 @@
        "                               Loss_continuity_u  Loss_continuity_du  \\\n",
        "B13_H4_N200                         7.650000e-08        5.018000e-03   \n",
        "B6_FO_H2_N200_E_FA                  8.895000e-07        1.021000e-03   \n",
+       "B21_FO_H4_N100_E_FA_ModMLP          6.903000e-07        1.039000e-03   \n",
        "B7_FO_H6_N200_E_FA                  3.433000e-08        9.089000e-07   \n",
        "B11_FO_H4_N200_E                    1.033000e-07        2.031000e-05   \n",
+       "B24_H6_N200_E_FA_ModMLP             1.691000e-08        1.175000e-05   \n",
        "B8_FO_H4_N100_E_FA                  3.115000e-08        6.624000e-06   \n",
        "B12_FO_H4_N200                      1.376000e-08        5.751000e-04   \n",
        "B4_FO_H4_N200_E_FA                  1.203000e-07        2.632000e-05   \n",
@@ -548,9 +622,11 @@
        "B15_FO_H2_N200_E_FA_ModMLP          1.422000e-07        9.091000e-04   \n",
        "B10_FO_H4_N200_FA                   8.471000e-09        4.105000e-04   \n",
        "B19_FO_H4_N200_E_FA_ModMLP          2.195000e-08        1.493000e-04   \n",
+       "B23_FO_H6_N200_E_FA_ModMLP          1.031000e-06        1.592000e-02   \n",
        "B16_FO_H4_N200_E_FA_WF              2.442000e-06        5.989000e-04   \n",
        "B14_FO_H4_N200_E_FA_ResNet          5.007000e-08        1.396000e-06   \n",
        "B9_FO_H4_N250_E_FA                  3.118000e-08        7.587000e-06   \n",
+       "B22_FO_H4_N250_E_FA_ModMLP          2.905000e-07        3.202000e-03   \n",
        "B20_FO_H4_N200_E_FA_WF_ModMLP       4.287000e-07        2.473000e-04   \n",
        "B5_H4_N200_E_FA                     6.723000e-09        2.447000e-03   \n",
        "B_R2                                6.936000e-09        2.786000e-06   \n",
@@ -560,8 +636,10 @@
        "                               Loss_Residual_R1  Loss_Residual_R2  \\\n",
        "B13_H4_N200                        1.259000e-14      6.791000e-08   \n",
        "B6_FO_H2_N200_E_FA                 5.096000e-04      1.789000e-05   \n",
+       "B21_FO_H4_N100_E_FA_ModMLP         6.139000e-03      1.645000e-05   \n",
        "B7_FO_H6_N200_E_FA                 7.054000e-05      1.878000e-05   \n",
        "B11_FO_H4_N200_E                   2.207000e-04      4.419000e-05   \n",
+       "B24_H6_N200_E_FA_ModMLP            3.502000e-12      1.582000e-11   \n",
        "B8_FO_H4_N100_E_FA                 4.414000e-04      1.539000e-06   \n",
        "B12_FO_H4_N200                     5.645000e-06      3.446000e-04   \n",
        "B4_FO_H4_N200_E_FA                 4.135000e-04      3.643000e-06   \n",
@@ -570,9 +648,11 @@
        "B15_FO_H2_N200_E_FA_ModMLP         4.664000e-04      2.764000e-05   \n",
        "B10_FO_H4_N200_FA                  4.934000e-05      2.469000e-04   \n",
        "B19_FO_H4_N200_E_FA_ModMLP         2.872000e-05      2.697000e-05   \n",
+       "B23_FO_H6_N200_E_FA_ModMLP         1.216000e-04      6.140000e-05   \n",
        "B16_FO_H4_N200_E_FA_WF             6.160000e-05      2.070000e-04   \n",
        "B14_FO_H4_N200_E_FA_ResNet         6.962000e-04      3.517000e-06   \n",
        "B9_FO_H4_N250_E_FA                 1.832000e-04      3.795000e-06   \n",
+       "B22_FO_H4_N250_E_FA_ModMLP         4.244000e-05      4.512000e-05   \n",
        "B20_FO_H4_N200_E_FA_WF_ModMLP      3.324000e-04      6.552000e-06   \n",
        "B5_H4_N200_E_FA                    9.664000e-14      6.476000e-07   \n",
        "B_R2                               4.874000e-07      7.660000e-08   \n",
@@ -582,8 +662,10 @@
        "                               Loss_Boundary_D2  Loss_Data_K2  L2_analytic  \n",
        "B13_H4_N200                        2.417000e-08  4.154000e-08       42.430  \n",
        "B6_FO_H2_N200_E_FA                 1.972000e-07  2.538000e-07       52.290  \n",
+       "B21_FO_H4_N100_E_FA_ModMLP         4.176000e-08  4.732000e-08       58.380  \n",
        "B7_FO_H6_N200_E_FA                 1.761000e-07  8.551000e-08       47.660  \n",
        "B11_FO_H4_N200_E                   4.364000e-08  1.726000e-08       62.280  \n",
+       "B24_H6_N200_E_FA_ModMLP            3.194000e-08  2.064000e-08       55.640  \n",
        "B8_FO_H4_N100_E_FA                 3.338000e-09  5.685000e-09       47.630  \n",
        "B12_FO_H4_N200                     5.104000e-09  4.875000e-09       21.750  \n",
        "B4_FO_H4_N200_E_FA                 1.601000e-08  1.155000e-08       56.620  \n",
@@ -592,9 +674,11 @@
        "B15_FO_H2_N200_E_FA_ModMLP         6.546000e-08  4.982000e-08       57.830  \n",
        "B10_FO_H4_N200_FA                  4.558000e-09  4.709000e-09       23.580  \n",
        "B19_FO_H4_N200_E_FA_ModMLP         3.491000e-08  1.691000e-08       65.100  \n",
+       "B23_FO_H6_N200_E_FA_ModMLP         1.763000e-07  1.834000e-07       37.560  \n",
        "B16_FO_H4_N200_E_FA_WF             1.826000e-06  1.944000e-06       53.520  \n",
        "B14_FO_H4_N200_E_FA_ResNet         6.340000e-08  1.520000e-08       45.220  \n",
        "B9_FO_H4_N250_E_FA                 5.189000e-09  4.473000e-09       55.810  \n",
+       "B22_FO_H4_N250_E_FA_ModMLP         1.820000e-07  1.985000e-07       54.780  \n",
        "B20_FO_H4_N200_E_FA_WF_ModMLP      4.170000e-08  6.019000e-08       68.480  \n",
        "B5_H4_N200_E_FA                    5.014000e-07  2.225000e-07       75.050  \n",
        "B_R2                               1.065000e-09  9.719000e-10       55.100  \n",
@@ -602,7 +686,7 @@
        "B_R1                               1.646000e-05  2.900000e-05      187.400  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
