--- a/xppbe/Molecules/Known_Dataset.ipynb
+++ b/xppbe/Molecules/Known_Dataset.ipynb
@@ -8,16 +8,12 @@
    "source": [
     "import numpy as np\n",
     "import os\n",
-    "import sys\n",
     "\n",
-    "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
     "\n",
-    "from Mesh.Charges_utils import get_charges_list\n",
-    "from Model.Solutions_utils import Solution_utils\n",
-    "from Simulation import get_simulation_name\n",
-    "\n",
-    "simulation_name,results_path,main_path,logger = get_simulation_name(os.path.join(os.path.dirname(os.getcwd()), 'dataset.py'))\n",
+    "from xppbe.Model.Solutions_utils import Solution_utils\n",
+    "from xppbe.Model.PDE_Model import PBE\n",
+    "from xppbe import xppbe_path\n",
     "\n",
     "file_path = os.getcwd()"
    ]
@@ -29,7 +25,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "molecule = 'born_ion'\n",
+    "molecule = 'sphere_Nqs'\n",
     "\n",
     "\n",
     "Rs = {'born_ion': 1,\n",
@@ -41,12 +37,13 @@
     "      'sphere_+1+1': 1.2,\n",
     "      'sphere_+2-1': 1.2,\n",
     "      'sphere_+1_D': 1.2,\n",
-    "      'sphere_0.2': 1.2}\n",
+    "      'sphere_Nqs': 1.2}\n",
     "\n",
     "Model = Solution_utils()\n",
     "\n",
-    "Model.pqr_path = os.path.join(os.getcwd(),molecule,f'{molecule}.pqr')\n",
-    "q_list = get_charges_list(Model.pqr_path)\n",
+    "Model.main_path = xppbe_path\n",
+    "Model.molecule_path = os.path.join(xppbe_path,'Molecules',molecule)\n",
+    "\n",
     "\n",
     "Model.domain_properties = {\n",
     "        'molecule': molecule,\n",
@@ -56,28 +53,11 @@
     "        'T' : 300 \n",
     "        }\n",
     "\n",
-    "Model.epsilon_1 = Model.domain_properties['epsilon_1']\n",
-    "Model.epsilon_2 = Model.domain_properties['epsilon_2']\n",
-    "Model.kappa = Model.domain_properties['kappa']\n",
-    "Model.pi = np.pi\n",
-    "Model.q_list = q_list\n",
+    "for key in Model.domain_properties:\n",
+    "      setattr(Model, key, Model.domain_properties[key])\n",
     "\n",
-    "n = len(Model.q_list)\n",
-    "Model.qs = np.zeros(n)\n",
-    "Model.x_qs = np.zeros((n,3))\n",
-    "for i,q in enumerate(Model.q_list):\n",
-    "    Model.qs[i] = q.q\n",
-    "    Model.x_qs[i,:] = q.x_q\n",
-    "Model.total_charge = np.sum(Model.qs)\n",
     "\n",
-    "dR = 0.15\n",
-    "R_mol = Rs[molecule]\n",
-    "Rmin = dR + R_mol\n",
-    "Rmax = Rmin + 3\n",
-    "\n",
-    "Model.mesh_density = 3\n",
-    "Model.mesh_generator = 'msms'\n",
-    "Model.DTYPE = 'float64'"
+    "PBE.get_charges(Model)\n"
    ]
   },
   {
@@ -88,7 +68,11 @@
     {
      "data": {
       "text/plain": [
-       "[Charges(q=1.0, x_q=array([0., 0., 0.]), r_q=1.0, atom_name='I', res_name='SPH', res_num='1', ion_r_explode=3.5)]"
+       "[Charges(q=1.0, x_q=array([1.e-08, 0.e+00, 0.e+00]), r_q=1.2, atom_name='I', res_name='SPH', res_num='1', ion_r_explode=3.5),\n",
+       " Charges(q=2.0, x_q=array([0.5, 0.2, 0. ]), r_q=0.0001, atom_name='I', res_name='SPH', res_num='1', ion_r_explode=3.5),\n",
+       " Charges(q=-1.0, x_q=array([-0.5,  0. ,  0.1]), r_q=0.0001, atom_name='I', res_name='SPH', res_num='1', ion_r_explode=3.5),\n",
+       " Charges(q=1.4, x_q=array([0. , 0.2, 0.4]), r_q=0.0001, atom_name='I', res_name='SPH', res_num='1', ion_r_explode=3.5),\n",
+       " Charges(q=-3.0, x_q=array([ 0. , -0.3, -0.1]), r_q=0.0001, atom_name='I', res_name='SPH', res_num='1', ion_r_explode=3.5)]"
       ]
      },
      "execution_count": 3,
@@ -97,7 +81,21 @@
     }
    ],
    "source": [
-    "q_list"
+    "Model.q_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dR = 0.15\n",
+    "R_mol = Rs[molecule]\n",
+    "Rmin = dR + R_mol\n",
+    "Rmax = Rmin + 3\n",
+    "\n",
+    "Model.DTYPE = 'float64'"
    ]
   },
   {
@@ -116,18 +114,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-73.13704757700724\n",
-      "[-0.0149601  -0.01451289 -0.0165293  -0.01756816 -0.01609127 -0.01400082\n",
-      " -0.01420401 -0.01449526 -0.01436105 -0.01478346 -0.01487474 -0.01501364\n",
-      " -0.01465445 -0.01440891 -0.01448955 -0.01504634 -0.01500428 -0.01502074\n",
-      " -0.01554073 -0.01578378 -0.01580813 -0.01551957 -0.01506542 -0.01584317\n",
-      " -0.01652246 -0.01676533 -0.01704408]\n"
+      "[-0.0262375  -0.07895157  0.00366047 -0.05481606 -0.00050707]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-73.13704757700724"
+       "-548.7745934585375"
       ]
      },
      "execution_count": 5,
@@ -136,10 +129,9 @@
     }
    ],
    "source": [
-    "phi_q = Model.Harmonic_spheres(Model.x_qs,'molecule',R_mol)\n",
-    "print(Model.solvation_energy_phi_qs(phi_q))\n",
+    "phi_q = Model.Spherical_Harmonics(Model.x_qs,'molecule',R_mol, N=30)\n",
     "print(phi_q)\n",
-    "Model.solvation_energy_phi_qs(phi_q)"
+    "PBE.solvation_energy_phi_qs(Model,phi_q)"
    ]
   },
   {
@@ -151,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
